--- a/features.html
+++ b/features.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Loruki.</h1>
+            <h1 class="logo">Loruki</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -32,6 +32,45 @@
                 <p class="lead">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus quidem dignissimos.
                 </p>
+            </div>
+            <img src="images/server.png" alt="">
+        </div>
+    </section>
+
+    <!-- Sub Head -->
+    <section class="features-sub-head bg-light py-3">
+        <div class="container grid">
+            <div>
+                <h1 class="md">The Loruki Platform</h1>
+                <p class="lead">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas a nesciunt inventore accusantium quod tempora, iure iusto voluptatem beatae optio dicta totam quae. Corporis quidem, debitis omnis eaque reiciendis error.
+                </p>
+            </div>
+            <img src="images/server2.png" alt=""> 
+        </div>
+    </section>
+
+    <section class="features-main my-2">
+        <div class="container grid grid-3">
+            <div class="card flex">
+                <i class="fas fa-server fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum asperiores incidunt consequatur doloribus rerum, natus vitae corrupti temporibus atque maxime vero omnis dolor culpa molestias, dolore vel distinctio animi!</p>
+            </div>
+            <div class="card flex">
+                <i class="fas fa-upload fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum asperiores incidunt consequatur doloribus rerum, natus vitae corrupti temporibus atque maxime vero omnis dolor culpa molestias, dolore vel distinctio animi!</p>
+            </div><div class="card flex">
+                <i class="fas fa-project-diagram fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum asperiores incidunt consequatur doloribus rerum, natus vitae corrupti temporibus atque maxime vero omnis dolor culpa molestias, dolore vel distinctio animi!</p>
+            </div><div class="card flex">
+                <i class="fas fa-server fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum asperiores incidunt consequatur doloribus rerum, natus vitae corrupti temporibus atque maxime vero omnis dolor culpa molestias, dolore vel distinctio animi!</p>
+            </div><div class="card flex">
+                <i class="fas fa-server fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum asperiores incidunt consequatur doloribus rerum, natus vitae corrupti temporibus atque maxime vero omnis dolor culpa molestias, dolore vel distinctio animi!</p>
+            </div><div class="card flex">
+                <i class="fas fa-server fa-3x"></i>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta earum asperiores incidunt consequatur doloribus rerum, natus vitae corrupti temporibus atque maxime vero omnis dolor culpa molestias, dolore vel distinctio animi!</p>
             </div>
         </div>
     </section>
