--- a/docs.html
+++ b/docs.html
@@ -13,7 +13,9 @@
     <!-- Navbar -->
     <div class="navbar">
         <div class="container flex">
-            <h1 class="logo">Loruki</h1>
+            <div class="logo">
+                <a href="index.html">Loruki</a>
+            </div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -88,7 +90,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer bg-dark py-5">
+    <footer class="footer bg-dark">
         <div class="container grid grid-3">
             <div>
                 <h1>Loruki</h1>
@@ -102,10 +104,10 @@
                 </ul>
             </nav>
             <div class="social">
-                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-                <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
-                <a href="#"><i class="fab fa-github fa-2x"></i></a>
+                <a href="https://twitter.com/i/flow/login?lang=en"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook fa-2x"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x"></i></a>
+                <a href="https://github.com/"><i class="fab fa-github fa-2x"></i></a>
             </div>
         </div>
     </footer>
