--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 </ul>
             </nav>
             <div class="social">
-                <a href="https://twitter.com/i/flow/login?lang=en"><i class="fab fa-twitter fa-2x"></i></a>
+                <a href="https://twitter.com/i/flow/login?lang=en"><i class="fa-brands fa-x-twitter fa-2x"></i></a>
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x"></i></a>
                 <a href="https://github.com/"><i class="fab fa-github fa-2x"></i></a>
